src/objects/WTRC_Shipment__c.object
<CustomObject>
    <fields>
        <fullName>CODCOP_Amount__c</fullName>
        <label>CODCOP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COD_Amount__c</fullName>
        <label>COD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class</description>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BK/B.KARTE, B.KALKULATORS</fullName>
                </value>
                <value>
                    <fullName>BK/CITAS LIETAS</fullName>
                </value>
                <value>
                    <fullName>BK/DOKUMENTI</fullName>
                </value>
                <value>
                    <fullName>BKK/B.KARTE, B.KALKULATORS</fullName>
                </value>
                <value>
                    <fullName>BKK/CITAS LIETAS</fullName>
                </value>
                <value>
                    <fullName>BKK/DOKUMENTI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_City__c</fullName>
        <description>Client City</description>
        <label>Client City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Country__c</fullName>
        <description>Client Country</description>
        <label>Client Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <description>Client Email</description>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <description>Client Phone</description>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Street__c</fullName>
        <description>Client Street</description>
        <label>Client Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Zip__c</fullName>
        <description>Client Zip</description>
        <label>Client Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Parcel_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>Content Type</description>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOCUMENT</fullName>
                </value>
                <value>
                    <fullName>MERCHANDISE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declared_Value__c</fullName>
        <description>Declared Value</description>
        <label>Declared Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Option__c</fullName>
        <description>Delivery Option</description>
        <label>Delivery Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECONOMY</fullName>
                </value>
                <value>
                    <fullName>BUSINESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Barcode</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Includes__c</fullName>
        <description>Includes</description>
        <label>Includes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insured_Value__c</fullName>
        <description>Insured Value</description>
        <label>Insured Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Load_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <label>Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Parcel_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packets__c</fullName>
        <label>Packets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parcel_Description__c</fullName>
        <description>Parcel Description</description>
        <label>Parcel Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <description>Payment Option</description>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SENDER</fullName>
                </value>
                <value>
                    <fullName>RECEIVER</fullName>
                </value>
                <value>
                    <fullName>THIRD PARTY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Priority</description>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parcels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiver_Location__c</fullName>
        <label>Receiver Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Name__c</fullName>
        <label>Receiver Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery on specified date/time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_Deap__c</fullName>
        <description>Size Deap</description>
        <label>Size Deap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_High__c</fullName>
        <description>Size High</description>
        <label>Size High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_Long__c</fullName>
        <description>Size Long</description>
        <label>Size Long</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTRACE_XML__c</fullName>
        <label>Generated XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WT Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WT Shipment</pluralLabel>
    <recordTypes>
        <fullName>Shipment</fullName>
        <active>true</active>
        <description>Basic Shipment</description>
        <label>Shipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shipment_With_Items</fullName>
        <active>true</active>
        <description>Shipment With Items</description>
        <label>Shipment With Items</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>